--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/car-rental-app
-spring.datasource.username=root
-spring.datasource.password=DataScientist@[[465]]
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8081
+#spring.datasource.url=jdbc:mysql://localhost:3306/car-rental-app
+#spring.datasource.username=root
+#spring.datasource.password=DataScientist@[[465]]
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+spring.profiles.active=${ENV:dev}
 
