--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,3 +5,4 @@ spring.datasource.password=DataScientist@[[465]]
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
