--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,5 +2,11 @@ spring.datasource.url=jdbc:mysql://mysql.railway.internal:3339/railway
 spring.datasource.username=root
 spring.datasource.password=POcusIviKvTgsRCCnWOJugTjnUpQGdmJ
 
+#jpa configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
+#dialect
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+#driver classname
