--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-server.port=8081
-#spring.datasource.url=jdbc:mysql://localhost:3306/car-rental-app
-#spring.datasource.username=root
-#spring.datasource.password=DataScientist@[[465]]
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#server.port=8080
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/car-rental-app?enabledTLSProtocols=TLSv1.2
+spring.datasource.username=root
+spring.datasource.password=DataScientist@[[465]]
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
-
-spring.profiles.active=${ENV:dev}
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.profiles.active=${ENV:dev}
 
